fixed cached constsnt determination (bug #142 related)

mysql-test/r/subselect.result:
  test of constant redecing
mysql-test/t/subselect.test:
  test of constant redecing
sql/item_cmpfunc.cc:
  fixed cached constsnt determination