sql/item_cmpfunc.cc
@@ -298,12 +298,22 @@ bool Item_in_optimizer::fix_fields(THD *thd, struct st_table_list *tables,
     return 1;
   cache->setup(args[0]);
   if (cache->cols() == 1)
-    cache->set_used_tables(RAND_TABLE_BIT);
+  {
+    if (args[0]->used_tables())
+      cache->set_used_tables(RAND_TABLE_BIT);
+    else
+      cache->set_used_tables(0);
+  }
   else
   {
     uint n= cache->cols();
     for (uint i= 0; i < n; i++)
-      ((Item_cache *)cache->el(i))->set_used_tables(RAND_TABLE_BIT);
+    {
+      if (args[0]->el(i)->used_tables())
+	((Item_cache *)cache->el(i))->set_used_tables(RAND_TABLE_BIT);
+      else
+	((Item_cache *)cache->el(i))->set_used_tables(0);
+    }
   }
   if (args[1]->fix_fields(thd, tables, args))
     return 1;
